--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     ></script>
     <style>
       body {
-        background-image: url('avatar.PNG');
+        background-image: url("avatar.PNG");
         background-size: cover;
         background-position: center;
         background-attachment: fixed;
         min-height: 100vh;
-        font-family: 'Georgia', serif;
+        font-family: "Georgia", serif;
       }
       body::before {
-        content: '';
+        content: "";
         position: fixed;
         top: 0;
         left: 0;
@@ -54,7 +54,7 @@
       }
       .gothic-text {
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8), 0 0 10px rgba(139, 69, 19, 0.5);
-        font-family: 'Georgia', serif;
+        font-family: "Georgia", serif;
       }
       .script-card h3 {
         color: #ffffff !important;
@@ -131,9 +131,7 @@
           style="background: rgba(0, 0, 0, 0.3)"
         >
           Witamy w Ko... Eclesiar Scripts by
-          <a href="https://eclesiar.com/user/11062" target="_blank" style="color: #842214"
-            >p0tfur</a
-          >
+          <a href="https://eclesiar.com/user/11062" target="_blank" style="color: #842214">p0tfur</a>
         </h1>
         <p
           class="text-xl text-white/90 max-w-2xl mx-auto inline-block px-4 py-2 rounded"
@@ -143,8 +141,7 @@
         </p>
         <div class="hr-runic"></div>
         <p class="lore-quote max-w-3xl mx-auto" style="background: rgba(0, 0, 0, 0.3)">
-          "Powiedzmy sobie szczerze. Przyszedłeś tu tylko dlatego, żeby móc pocałować Gomeza w dupę"
-          — Kharim.
+          "Powiedzmy sobie szczerze. Przyszedłeś tu tylko dlatego, żeby móc pocałować Gomeza w dupę" — Kharim.
         </p>
       </header>
 
@@ -153,23 +150,18 @@
         <!-- Eclesiar Market & Auctions -->
         <div class="script-card p-6">
           <div class="text-center mb-4">
-            <div
-              class="w-16 h-16 bg-blue-500 rounded-full flex items-center justify-center mx-auto mb-3"
-            >
+            <div class="w-16 h-16 bg-blue-500 rounded-full flex items-center justify-center mx-auto mb-3">
               <span class="text-2xl">🏛️</span>
             </div>
             <h3 class="text-xl font-bold text-gray-800 mb-2">Market & Auctions</h3>
-            <span
-              class="inline-block bg-blue-100 text-blue-800 text-xs px-2 py-1 rounded-full font-medium"
-            >
-              v1.2.0
+            <span class="inline-block bg-blue-100 text-blue-800 text-xs px-2 py-1 rounded-full font-medium">
+              v1.2.6
             </span>
           </div>
           <p class="text-gray-600 mb-4 text-sm leading-relaxed">
-            Ułatwia zakupy na rynku poprzez wyświetlanie flag narodowości sprzedawców obok ich nazw
-            (zarówno gracze, jak i holdingi - wtedy flaga jest flagą właściciela holdingu). Dla
-            aukcji dodaje specjalne wskaźniki cenowe, które pokazują, czy aktualna oferta jest
-            korzystna w porównaniu do średnich cen z 7 dni.
+            Ułatwia zakupy poprzez wyświetlanie flag narodowości sprzedawców obok ich nazw (zarówno gracze, jak i
+            holdingi - wtedy flaga jest flagą właściciela holdingu). Dla aukcji dodaje specjalne wskaźniki cenowe, które
+            pokazują, czy aktualna oferta jest korzystna w porównaniu do średnich cen z 7 dni.
           </p>
           <a
             href="https://24na7.info/eclesiar-scripts/Eclesiar%20Market%20&%20Auctions.user.js"
@@ -179,7 +171,7 @@
           </a>
           <div class="chip-row">
             <span class="chip"><span class="ico">🛡️</span>"A to ci niespodzianka!"</span>
-            <span class="chip"><span class="ico">🧱</span>Cecha: Targowanie jak u Bospera</span>
+            <span class="chip"><span class="ico">🧱</span>Targowanie jak u Bospera</span>
             <span class="chip"><span class="ico">💰</span>Rynek jak w Khorinis</span>
           </div>
         </div>
@@ -187,23 +179,18 @@
         <!-- Eclesiar Misc Additions -->
         <div class="script-card p-6">
           <div class="text-center mb-4">
-            <div
-              class="w-16 h-16 bg-green-500 rounded-full flex items-center justify-center mx-auto mb-3"
-            >
+            <div class="w-16 h-16 bg-green-500 rounded-full flex items-center justify-center mx-auto mb-3">
               <span class="text-2xl">⚙️</span>
             </div>
             <h3 class="text-xl font-bold text-gray-800 mb-2">Misc Additions</h3>
-            <span
-              class="inline-block bg-green-100 text-green-800 text-xs px-2 py-1 rounded-full font-medium"
-            >
-              v1.2.5
+            <span class="inline-block bg-green-100 text-green-800 text-xs px-2 py-1 rounded-full font-medium">
+              v1.2.9
             </span>
           </div>
           <p class="text-gray-600 mb-4 text-sm leading-relaxed">
-            Dodaje wiele usprawnień do codziennej rozgrywki: dodaje opcję zmiany ekwipunku w widoku
-            budowy oraz kopalni, pokazuje czas do pełnego uzupełnienia energii i jedzenia, dodaje
-            opcję Cedrowania przy łączeniu przedmiotów, wyświetla obie rangi (wojskową i budowlaną)
-            oraz dodaje menu "Moje transakcje".
+            Dodaje wiele usprawnień do codziennej rozgrywki: dodaje opcję zmiany ekwipunku w widoku budowy oraz kopalni,
+            pokazuje czas do pełnego uzupełnienia energii i jedzenia, dodaje opcję Cedrowania przy łączeniu przedmiotów,
+            wyświetla obie rangi (wojskową i budowlaną) oraz dodaje menu "Moje transakcje".
           </p>
           <a
             href="https://24na7.info/eclesiar-scripts/Eclesiar%20Misc%20Additions.user.js"
@@ -219,23 +206,18 @@
         <!-- Eclesiar Training Center Plus -->
         <div class="script-card p-6">
           <div class="text-center mb-4">
-            <div
-              class="w-16 h-16 bg-purple-500 rounded-full flex items-center justify-center mx-auto mb-3"
-            >
+            <div class="w-16 h-16 bg-purple-500 rounded-full flex items-center justify-center mx-auto mb-3">
               <span class="text-2xl">💪</span>
             </div>
             <h3 class="text-xl font-bold text-gray-800 mb-2">Training Center Plus</h3>
-            <span
-              class="inline-block bg-purple-100 text-purple-800 text-xs px-2 py-1 rounded-full font-medium"
-            >
+            <span class="inline-block bg-purple-100 text-purple-800 text-xs px-2 py-1 rounded-full font-medium">
               v1.2.1
             </span>
           </div>
           <p class="text-gray-600 mb-4 text-sm leading-relaxed">
-            Poprawia centrum treningowe poprzez dodanie panelu ustawień z opcjami
-            włączania/wyłączania funkcji, alternatywnego widoku tabeli dla statystyk sprzętu,
-            kolorowych obramowań dla najlepszego sprzętu (perf equipment), filtrów do wyszukiwania
-            sprzętu oraz przeniesienie przycisku trenowania w wygodniejsze miejsce.
+            Poprawia centrum treningowe poprzez dodanie panelu ustawień z opcjami włączania/wyłączania funkcji,
+            alternatywnego widoku tabeli dla statystyk sprzętu, kolorowych obramowań dla najlepszego sprzętu (perf
+            equipment), filtrów do wyszukiwania sprzętu oraz przeniesienie przycisku trenowania w wygodniejsze miejsce.
           </p>
           <a
             href="https://24na7.info/eclesiar-scripts/Eclesiar%20Training%20Center.user.js"
@@ -253,15 +235,12 @@
 
       <!-- Installation Instructions -->
       <div class="gothic-card-light p-6 mb-8">
-        <h2 class="text-2xl font-bold text-white mb-4 text-center gothic-text">
-          Jak zainstalować?
-        </h2>
+        <h2 class="text-2xl font-bold text-white mb-4 text-center gothic-text">Jak zainstalować?</h2>
         <div class="grid md:grid-cols-2 gap-6 text-white/90">
           <div>
             <h3 class="font-semibold mb-2 gothic-text">1. Zainstaluj Tampermonkey</h3>
             <p class="text-sm">
-              Jeśli nie masz jeszcze zainstalowanego, pobierz rozszerzenie Tampermonkey dla swojej
-              przeglądarki:
+              Jeśli nie masz jeszcze zainstalowanego, pobierz rozszerzenie Tampermonkey dla swojej przeglądarki:
             </p>
             <ul class="text-sm mt-2 space-y-1">
               <li>
@@ -285,54 +264,90 @@
           <div>
             <h3 class="font-semibold mb-2 gothic-text">2. Zainstaluj skrypt</h3>
             <p class="text-sm">
-              Kliknij przycisk "Pobierz skrypt" powyżej. Tampermonkey automatycznie rozpozna plik i
-              zapyta o instalację. Potwierdź instalację.
+              Kliknij przycisk "Pobierz skrypt" powyżej. Tampermonkey automatycznie rozpozna plik i zapyta o instalację.
+              Potwierdź instalację.
             </p>
             <p class="text-sm mt-2">
               <strong>Gotowe!</strong> Skrypt będzie działał automatycznie na stronie Eclesiar.
             </p>
           </div>
           <p>
-            Wszystkie skrypty testowane są na PC oraz Firefox. Ewentualne bugi proszę zgłaszać na
-            Discord.
+            Wszystkie skrypty testowane są na PC oraz Firefox (wyrywkowo również Chrome, Edge, Vivaldi). Ewentualne bugi
+            proszę zgłaszać na Discord.
           </p>
         </div>
       </div>
 
       <!-- Changelog Placeholder -->
-      <div class="gothic-card-light p-6">
-        <h2 class="text-2xl font-bold text-white mb-4 text-center gothic-text">Historia zmian</h2>
-        <p class="text-white/90 text-center">
-          Szczegółowe informacje o zmianach w każdej wersji będą publikowane na bieżąco.
-        </p>
-      </div>
+      <section class="gothic-card-light p-6">
+        <h2 class="text-2xl font-bold text-white mb-6 text-center gothic-text">Historia zmian</h2>
+        <div class="grid gap-6 text-white/90 md:grid-cols-3">
+          <div class="rounded-lg bg-white/5 p-4 h-full">
+            <h3 class="mb-3 text-center text-lg font-semibold text-white gothic-text">
+              Eclesiar Market &amp; Auctions
+            </h3>
+            <ul class="space-y-2 text-sm">
+              <li class="text-center">1.2.6</li>
+              <ul class="space-y-2 text-sm">
+                <li><span class="ico">+</span> flagi narodowości sprzedającego również na rynek walutowy.</li>
+                <li>
+                  <span class="ico">+</span> sprawdzenie narodowości również jeśli właścicielem holdingu jest grupa
+                  bojowa.
+                </li>
+                <li><span class="ico">+</span> drobne wizualne poprawki.</li>
+                <p>
+                  <span class="font-semibold">It's a feature, not a bug. </span>Przy pierwszym wejściu może wyrzucić
+                  błąd "429 Too many requests." Tak ma być. Po prostu pierwsze sprawdzenie narodowości generuje większą
+                  ilość zapytań.
+                </p>
+              </ul>
+            </ul>
+          </div>
+          <div class="rounded-lg bg-white/5 p-4 h-full">
+            <h3 class="mb-3 text-center text-lg font-semibold text-white gothic-text">Eclesiar Misc Additions</h3>
+            <ul class="space-y-2 text-sm">
+              <li class="text-center">1.2.9</li>
+              <ul class="space-y-2 text-sm">
+                <li>
+                  <span class="ico">-</span> usunięto datę ze wskaźników kiedy ene/chlebki będą pełne pozostawiając
+                  tylko godzinę.
+                </li>
+                <li>
+                  <span class="ico">+</span> aktualizacja wskaźników (odliczania w nawiasie) na żywo a nie tylko przy
+                  odświeżeniu strony.
+                </li>
+                <li><span class="ico">+</span> poprawione przyciski do zgłaszania się na kandydata w widoku partii.</li>
+              </ul>
+            </ul>
+          </div>
+          <div class="rounded-lg bg-white/5 p-4 h-full">
+            <h3 class="mb-3 text-center text-lg font-semibold text-white gothic-text">Training Center Plus</h3>
+            <ul class="space-y-2 text-sm">
+              <li class="text-center">Brak wpisów — aktualizacje w przygotowaniu.</li>
+            </ul>
+          </div>
+        </div>
+      </section>
 
       <!-- Smaczki z Kolonii -->
       <div class="gothic-card-light p-6 mt-6">
-        <h2 class="text-2xl font-bold text-white mb-3 text-center gothic-text">
-          Smaczki z Kolonii
-        </h2>
+        <h2 class="text-2xl font-bold text-white mb-3 text-center gothic-text">Smaczki z Kolonii</h2>
         <div class="hr-runic"></div>
-        <ul class="text-sm text-white/90 space-y-2 text-center max-w-3xl mx-auto">
+        <ul class="text-md text-white/90 space-y-4 text-center max-w-5xl mx-auto">
           <li>
-            • „Nie ma takiego bicia” — ale na aukcji zawsze ktoś przebije. Za przebicie obcokrajowca
-            punkty gratis.
+            • „Nie ma takiego bicia” - ale na aukcji zawsze ktoś przebije. Za przebicie obcokrajowca punkty gratis.
           </li>
           <li>
-            • Ryż z Górniczej Doliny poprawia skupienie przy przeglądaniu ofert. A Eclesiar Market &
-            Auctions pomaga, aby nie kupić od Araba.
+            • Ryż z Górniczej Doliny poprawia skupienie przy przeglądaniu ofert. A Eclesiar Market & Auctions pomaga,
+            aby nie kupić od Araba.
           </li>
           <li>
-            • Diego poleca: zanim kupisz, sprawdź średnią cenę z 7 dni. Teraz jeszcze łatwiej dzięki
-            Eclesiar Market & Auctions.
+            • Diego poleca: zanim kupisz, sprawdź średnią cenę z 7 dni. Teraz jeszcze łatwiej dzięki Eclesiar Market &
+            Auctions.
           </li>
           <li>
-            • U kowala usłyszysz: „Masz rudę?” — u nas: „Masz golda?” Jak tak to
-            <a
-              href="https://eclesiar.com/user/11062"
-              class="text-blue-300 hover:text-blue-200 underline"
-              >wyślij!</a
-            >
+            • U kowala usłyszysz: „Masz rudę?” - u nas: „Masz golda?” Jak tak to
+            <a href="https://eclesiar.com/user/11062" class="text-blue-300 hover:text-blue-200 underline">WYŚLIJ!</a>
           </li>
         </ul>
       </div>
@@ -340,12 +355,10 @@
       <!-- Footer -->
       <footer class="text-center mt-12 text-white/70 text-sm">
         <p>
-          © 2025 p0tfur | Stworzone z ❤️ do
-          <a href="PFA-soldier.png" class="text-blue-300 hover:text-blue-200 underline">PFA</a> i
+          © 2025 <a href="https://github.com/p0tfur" class="text-blue-300 hover:text-blue-200 underline">p0tfur</a> |
+          Stworzone z ❤️ do <a href="PFA-soldier.png" class="text-blue-300 hover:text-blue-200 underline">PFA</a> i
           całej społeczności graczy | Licencja:
-          <a href="license.md" class="text-blue-300 hover:text-blue-200 underline"
-            >CC BY-NC-SA 4.0</a
-          >
+          <a href="license.md" class="text-blue-300 hover:text-blue-200 underline">CC BY-NC-SA 4.0</a>
         </p>
       </footer>
     </div>
