--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             </div>
             <h3 class="text-xl font-bold text-gray-800 mb-2">Market & Auctions</h3>
             <span class="inline-block bg-blue-100 text-blue-800 text-xs px-2 py-1 rounded-full font-medium">
-              v1.3.0
+              v1.3.5
             </span>
           </div>
           <p class="text-gray-600 mb-4 text-sm leading-relaxed">
@@ -237,6 +237,19 @@
               <span class="label-open">Ukryj changelog</span>
             </summary>
             <div class="mt-2 text-sm text-white/90">
+              <ul class="space-y-2">
+                <li class="text-center font-semibold">1.3.5</li>
+                <ul class="space-y-2 text-sm">
+                  <li>Ograniczenie błędów "429 - Too many requests":</li>
+                  <li>
+                    <span class="ico">-</span>ogólna optymalizacja wczytywania danych o narodowości gracza/holdingu/MU
+                    oraz przy szybkiej zmianie zakładek np. na rynku przejście z "Wszystkie" na "Zboże"
+                  </li>
+                  <li><span class="ico">-</span>mniej agresywne zaciąganie powyższych danych</li>
+                  <li><span class="ico">-</span>kilka innych mniejszych optymalizacji wydajnościowych</li>
+                  <li><span class="ico">-</span>fixy wizualne i funkcjonalne pod mobile</li>
+                </ul>
+              </ul>
               <ul class="space-y-2">
                 <li class="text-center font-semibold">1.3.0</li>
                 <ul class="space-y-2 text-sm">
@@ -292,7 +305,7 @@
             </div>
             <h3 class="text-xl font-bold text-gray-800 mb-2">Misc Additions</h3>
             <span class="inline-block bg-green-100 text-green-800 text-xs px-2 py-1 rounded-full font-medium">
-              v1.3.8
+              v1.4.0
             </span>
           </div>
           <p class="text-gray-600 mb-2 text-sm leading-relaxed">
@@ -318,6 +331,19 @@
               <span class="label-open">Ukryj changelog</span>
             </summary>
             <div class="mt-2 text-sm text-white/90">
+              <ul class="space-y-2 text-sm">
+                <li class="text-center">1.4.0</li>
+                <ul class="space-y-2 text-sm">
+                  <li>
+                    <span class="ico">+</span>zmienione tło dla magazynowanych itemów na półprzezroczyste w celu poprawy
+                    widoczności obrazka itemu, szczególnie ma mobile
+                  </li>
+                  <li>
+                    <span class="ico">+</span>paskie energii i jedzenia "pełne o" odświeżają się natychmiast po
+                    zdjedzeniu chlebka
+                  </li>
+                </ul>
+              </ul>
               <ul class="space-y-2 text-sm">
                 <li class="text-center">1.3.8</li>
                 <ul class="space-y-2 text-sm">
@@ -388,7 +414,7 @@
             </div>
             <h3 class="text-xl font-bold text-gray-800 mb-2">Training Center Plus</h3>
             <span class="inline-block bg-purple-100 text-purple-800 text-xs px-2 py-1 rounded-full font-medium">
-              v1.2.1
+              v1.2.2
             </span>
           </div>
           <p class="text-gray-600 mb-4 text-sm leading-relaxed">
@@ -430,7 +456,7 @@
             </div>
             <h3 class="text-xl font-bold text-gray-800 mb-2">Januszex Assistant</h3>
             <span class="inline-block bg-amber-100 text-amber-800 text-xs px-2 py-1 rounded-full font-medium">
-              v1.0.1
+              v1.0.2
             </span>
           </div>
           <p class="text-gray-600 mb-4 text-sm leading-relaxed">
@@ -455,6 +481,12 @@
               <span class="label-open">Ukryj changelog</span>
             </summary>
             <div class="mt-2 text-sm text-white/90">
+              <ul class="space-y-2 text-sm">
+                <li class="text-center">1.0.2</li>
+                <ul class="space-y-2 text-sm">
+                  <li><span class="ico">+</span> log w konsoli że cache wygasło ograniczony do 1 aby nie spamować</li>
+                </ul>
+              </ul>
               <ul class="space-y-2 text-sm">
                 <li class="text-center">1.0.1</li>
                 <ul class="space-y-2 text-sm">
