fix: typos corrected

--- a/index.html
+++ b/index.html
@@ -336,11 +336,11 @@
                 <ul class="space-y-2 text-sm">
                   <li>
                     <span class="ico">+</span>zmienione tło dla magazynowanych itemów na półprzezroczyste w celu poprawy
-                    widoczności obrazka itemu, szczególnie ma mobile
+                    widoczności obrazka itemu, szczególnie na mobile
                   </li>
                   <li>
-                    <span class="ico">+</span>paskie energii i jedzenia "pełne o" odświeżają się natychmiast po
-                    zdjedzeniu chlebka
+                    <span class="ico">+</span>pasek energii i jedzenia "pełne o" odświeżają się natychmiast po zjedzeniu
+                    chlebka
                   </li>
                 </ul>
               </ul>
@@ -442,7 +442,13 @@
             </summary>
             <div class="mt-2 text-sm text-white/90">
               <ul class="space-y-2 text-sm">
-                <li class="text-center">Brak wpisów — aktualizacje w przygotowaniu.</li>
+                <li class="text-center">1.2.2</li>
+                <ul class="space-y-2 text-sm">
+                  <li>
+                    <span class="ico">+</span> naprawiono błąd ze nadmiernym logowaniem w konsoli na stronie aukcji
+                    (obsługa perfów)
+                  </li>
+                </ul>
               </ul>
             </div>
           </details>
