feat: added daily summaries for user companies and holdings

--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
             </div>
             <h3 class="text-xl font-bold text-gray-800 mb-2">Januszex Assistant</h3>
             <span class="inline-block bg-amber-100 text-amber-800 text-xs px-2 py-1 rounded-full font-medium">
-              v1.0.2
+              v1.2.5
             </span>
           </div>
           <p class="text-gray-600 mb-4 text-sm leading-relaxed">
@@ -487,6 +487,12 @@
               <span class="label-open">Ukryj changelog</span>
             </summary>
             <div class="mt-2 text-sm text-white/90">
+              <ul class="space-y-2 text-sm">
+                <li class="text-center">1.2.5</li>
+                <ul class="space-y-2 text-sm">
+                  <li><span class="ico">+</span> dodano widok podsumowania dla posiadanych firm/holdiingów</li>
+                </ul>
+              </ul>
               <ul class="space-y-2 text-sm">
                 <li class="text-center">1.0.2</li>
                 <ul class="space-y-2 text-sm">
