--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             </div>
             <h3 class="text-xl font-bold text-gray-800 mb-2">Misc Additions</h3>
             <span class="inline-block bg-green-100 text-green-800 text-xs px-2 py-1 rounded-full font-medium">
-              v1.4.0
+              v1.4.2
             </span>
           </div>
           <p class="text-gray-600 mb-2 text-sm leading-relaxed">
@@ -331,6 +331,12 @@
               <span class="label-open">Ukryj changelog</span>
             </summary>
             <div class="mt-2 text-sm text-white/90">
+              <ul class="space-y-2 text-sm">
+                <li class="text-center">1.4.2</li>
+                <ul class="space-y-2 text-sm">
+                  <li><span class="ico">+</span>dodano podsumowanie bonusów do ataku i obrony w widoku bitwy</li>
+                </ul>
+              </ul>
               <ul class="space-y-2 text-sm">
                 <li class="text-center">1.4.0</li>
                 <ul class="space-y-2 text-sm">
