--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             </div>
             <h3 class="text-xl font-bold text-gray-800 mb-2">Market & Auctions</h3>
             <span class="inline-block bg-blue-100 text-blue-800 text-xs px-2 py-1 rounded-full font-medium">
-              v1.3.5
+              v1.3.7
             </span>
           </div>
           <p class="text-gray-600 mb-4 text-sm leading-relaxed">
@@ -237,6 +237,15 @@
               <span class="label-open">Ukryj changelog</span>
             </summary>
             <div class="mt-2 text-sm text-white/90">
+              <ul class="space-y-2">
+                <li class="text-center font-semibold">1.3.7</li>
+                <ul class="space-y-2 text-sm">
+                  <li>
+                    wprowadzenie obsługi mnożenia (np. 14,144x7 lub 14*7,144) w polach do wprowadzenia ilości na General
+                    Market, Currency Market oraz w MU przy podziale zasobów
+                  </li>
+                </ul>
+              </ul>
               <ul class="space-y-2">
                 <li class="text-center font-semibold">1.3.5</li>
                 <ul class="space-y-2 text-sm">
