feat: added companies and holding export scripts added option to remotly deactivate Christmas event in misc adds

--- a/christmas-pages/p0tfur.html
+++ b/christmas-pages/p0tfur.html
@@ -207,7 +207,7 @@
       <p>Brrr! Trafiłeś do mroźnej kryjówki <span class="owner">p0tfor</span>'a!</p>
       <p>Odkryłeś ukryty prezent. Aby go odebrać, musisz się pośpieszyć, zanim zamarznie!</p>
       <p>Napisz na Discord do właściciela ze słowami: <br /><em>"Lód został przełamany"</em></p>
-      <a href="https://discord.com" target="_blank" class="discord-btn">Odbierz Prezent</a>
+      <a href="https://discord.com/channels/@me" target="_blank" class="discord-btn">Odbierz Prezent</a>
       <p>Pospiesz się, bo liczba prezentów jest oganiczona!</p>
     </div>
     <div class="footer-note">Zabawa jest finansowana przez organizatorów z prywatnych środków.</div>
