--- a/christmas-pages/passionce.html
+++ b/christmas-pages/passionce.html
@@ -270,7 +270,7 @@
             >"Różowa Cesarzowa"</strong
           >
         </div>
-        <a href="https://discord.com" target="_blank" class="btn">Otwórz Discord</a>
+        <a href="https://discord.com/channels/@me" target="_blank" class="btn">Otwórz Discord</a>
         <p style="font-size: 0.85rem; margin-top: 1.5rem; font-style: italic; opacity: 0.8">
           Pospiesz się, liczba prezentów jest ograniczona!
         </p>
