fix(januesz-assistant): observe class attribute changes to detect dropdown open, feat: added 'centrum przedsiębiorcy' added apollo server support separate script created for Christmas event version if Misc Adds

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             </div>
             <h3 class="text-xl font-bold text-gray-800 mb-2">Market & Auctions</h3>
             <span class="inline-block bg-blue-100 text-blue-800 text-xs px-2 py-1 rounded-full font-medium">
-              v1.3.7
+              v1.3.8
             </span>
           </div>
           <p class="text-gray-600 mb-4 text-sm leading-relaxed">
@@ -237,6 +237,12 @@
               <span class="label-open">Ukryj changelog</span>
             </summary>
             <div class="mt-2 text-sm text-white/90">
+              <ul class="space-y-2">
+                <li class="text-center font-semibold">1.3.8</li>
+                <ul class="space-y-2 text-sm">
+                  <li>skrypt działa również na Apollo</li>
+                </ul>
+              </ul>
               <ul class="space-y-2">
                 <li class="text-center font-semibold">1.3.7</li>
                 <ul class="space-y-2 text-sm">
@@ -314,7 +320,7 @@
             </div>
             <h3 class="text-xl font-bold text-gray-800 mb-2">Misc Additions</h3>
             <span class="inline-block bg-green-100 text-green-800 text-xs px-2 py-1 rounded-full font-medium">
-              v1.4.2
+              v1.4.5
             </span>
           </div>
           <p class="text-gray-600 mb-2 text-sm leading-relaxed">
@@ -340,6 +346,19 @@
               <span class="label-open">Ukryj changelog</span>
             </summary>
             <div class="mt-2 text-sm text-white/90">
+              <ul class="space-y-2 text-sm">
+                <li class="text-center">1.4.5</li>
+                <ul class="space-y-2 text-sm">
+                  <li><span class="ico">+</span>skrypt działa również na Apollo</li>
+                  <li><span class="ico">-</span>usunięto event świąteczno-noworoczny</li>
+                </ul>
+              </ul>
+              <ul class="space-y-2 text-sm">
+                <li class="text-center">1.4.4</li>
+                <ul class="space-y-2 text-sm">
+                  <li><span class="ico">+</span>event świąteczno-noworoczny</li>
+                </ul>
+              </ul>
               <ul class="space-y-2 text-sm">
                 <li class="text-center">1.4.2</li>
                 <ul class="space-y-2 text-sm">
@@ -429,7 +448,7 @@
             </div>
             <h3 class="text-xl font-bold text-gray-800 mb-2">Training Center Plus</h3>
             <span class="inline-block bg-purple-100 text-purple-800 text-xs px-2 py-1 rounded-full font-medium">
-              v1.2.2
+              v1.2.3
             </span>
           </div>
           <p class="text-gray-600 mb-4 text-sm leading-relaxed">
@@ -457,6 +476,12 @@
             </summary>
             <div class="mt-2 text-sm text-white/90">
               <ul class="space-y-2 text-sm">
+                <li class="text-center">1.2.3</li>
+                <ul class="space-y-2 text-sm">
+                  <li><span class="ico">+</span>skrypt działa również na Apollo</li>
+                </ul>
+              </ul>
+              <ul class="space-y-2 text-sm">
                 <li class="text-center">1.2.2</li>
                 <ul class="space-y-2 text-sm">
                   <li>
@@ -477,7 +502,7 @@
             </div>
             <h3 class="text-xl font-bold text-gray-800 mb-2">Januszex Assistant</h3>
             <span class="inline-block bg-amber-100 text-amber-800 text-xs px-2 py-1 rounded-full font-medium">
-              v1.2.5
+              v1.3.2
             </span>
           </div>
           <p class="text-gray-600 mb-4 text-sm leading-relaxed">
@@ -502,6 +527,24 @@
               <span class="label-open">Ukryj changelog</span>
             </summary>
             <div class="mt-2 text-sm text-white/90">
+              <ul class="space-y-2 text-sm">
+                <li class="text-center">1.3.2</li>
+                <ul class="space-y-2 text-sm">
+                  <li><span class="ico">FIX</span> holdingi przestały się wyświetlać w menu "Moje miejsca" -> naprawione</li>
+                  <li><span class="ico">+</span> Nowa rzecz: "Podsumowanie dzienne" było brzydkie i nie spełniało założeń więc wylatuje. Zastępuje je "Centrum Przedsiębiorcy"</li>
+                  <li><span class="ico">+</span> ogólne podsumowanie produkcji i kosztów ze wszystkich firm i holdingów</li>
+                  <li><span class="ico">+</span> waluty per user i holding -> z ostrzeżeniem jak masz mało żebyś dokupił</li>
+                  <li><span class="ico">+</span> info że ktoś odszedł</li>
+- wszystko widać na zrzutach -> u Was oczywiście bez cenzury :D
+                  <li><span class="ico">+</span> skrypt działa również na Apollo</li>
+                </ul>
+              </ul>
+              <ul class="space-y-2 text-sm">
+                <li class="text-center">1.2.6</li>
+                <ul class="space-y-2 text-sm">
+                  <li><span class="ico">+</span> skrypt działa również na Apollo</li>
+                </ul>
+              </ul>
               <ul class="space-y-2 text-sm">
                 <li class="text-center">1.2.5</li>
                 <ul class="space-y-2 text-sm">
@@ -538,7 +581,7 @@
             </div>
             <h3 class="text-xl font-bold text-gray-800 mb-2">Export Player Companies</h3>
             <span class="inline-block bg-slate-100 text-slate-800 text-xs px-2 py-1 rounded-full font-medium">
-              v1.1
+              v1.1.1
             </span>
           </div>
           <p class="text-gray-600 mb-4 text-sm leading-relaxed">
@@ -564,6 +607,12 @@
             </summary>
             <div class="mt-2 text-sm text-white/90">
               <ul class="space-y-2 text-sm">
+                <li class="text-center">1.1.1</li>
+                <ul class="space-y-2 text-sm">
+                  <li><span class="ico">+</span> skrypt działa również na Apollo</li>
+                </ul>
+              </ul>
+              <ul class="space-y-2 text-sm">
                 <li class="text-center">1.1</li>
                 <ul class="space-y-2 text-sm">
                   <li><span class="ico">+</span> wybór rankingu (global vs Polska) bez edycji kodu</li>
@@ -588,7 +637,7 @@
             </div>
             <h3 class="text-xl font-bold text-gray-800 mb-2">Export Holdings</h3>
             <span class="inline-block bg-emerald-100 text-emerald-800 text-xs px-2 py-1 rounded-full font-medium">
-              v1.2.2
+              v1.2.3
             </span>
           </div>
           <p class="text-gray-600 mb-4 text-sm leading-relaxed">
@@ -613,6 +662,12 @@
               <span class="label-open">Ukryj changelog</span>
             </summary>
             <div class="mt-2 text-sm text-white/90">
+              <ul class="space-y-2 text-sm">
+                <li class="text-center">1.2.3</li>
+                <ul class="space-y-2 text-sm">
+                  <li><span class="ico">+</span> skrypt działa również na Apollo</li>
+                </ul>
+              </ul>
               <ul class="space-y-2 text-sm">
                 <li class="text-center">1.2.2</li>
                 <ul class="space-y-2 text-sm">
