update: latest index version

--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
             </div>
             <h3 class="text-xl font-bold text-gray-800 mb-2">Januszex Assistant</h3>
             <span class="inline-block bg-amber-100 text-amber-800 text-xs px-2 py-1 rounded-full font-medium">
-              v1.3.2
+              v1.4.0
             </span>
           </div>
           <p class="text-gray-600 mb-4 text-sm leading-relaxed">
@@ -527,6 +527,40 @@
               <span class="label-open">Ukryj changelog</span>
             </summary>
             <div class="mt-2 text-sm text-white/90">
+              <ul class="space-y-2 text-sm">
+                <li class="text-center">1.4.0</li>
+                <ul class="space-y-2 text-sm">
+                  <li><span class="ico">+</span> panel do włączania/wyłączania każdej istniejącej funkcji, według preferencji, w Ustawieniach gry.</li>
+                  <li><span class="ico">+</span> łatwe kupowanie waluty dla holdingów na rynku walutowym: dodawaj holdingi do ulubionych, lub wyszukuj na liście.</li>
+                  <li><span class="ico">+</span> centrum przedsiębiorcy: pokazywanie również holdingów bez firm.</li>
+                  <li><span class="ico">+</span> centrum przedsiębiorcy: jasne powiadomienie czy waluty brakuje już na dziś, czy od jutra.</li>
+                  <li><span class="ico">+</span> firmy: dodano podsumowanie dziennego zysku ze sprzedaży.</li>
+                  <li><span class="ico">+</span> ukrywanie powiadomień o sprzedaży na rynku.</li>
+               </ul>
+              </ul>
+              <ul class="space-y-2 text-sm">
+                <li class="text-center">1.3.8</li>
+                <ul class="space-y-2 text-sm">
+                  <li><span class="ico">+</span> <b>połączony Dashboard:</b> Jedna karta na każdy Holding ze wszystkimi informacjami (Pracownicy, Produkcja, Bank, Magazyn)</li>
+                  <li><span class="ico">+</span> <b>fix Magazynu Holdingu:</b> Poprawne wyświetlanie stanów magazynowych dla wszystkich holdingów (fix parsowania)</li>
+                  <li><span class="ico">+</span> <b>dwujęzyczność:</b> obsługujemy polską i ang. wesję gry ALE wyświetlamy info tylko po Polsku</li>
+                  <li><span class="ico">+</span> <b>ulepszenia Magazynu:</b> Rozdzielenie jakości itemów (np. osobno Broń Q4 i Q5), wskaźnik wolnego miejsca z kolorami</li>
+                  <li><span class="ico">+</span> <b>produkcja:</b> Pokaywanie potencjału produkcyjnego (Capacity) zamiast tylko dzisiejszego urobku</li>
+                </ul>
+              </ul>
+              <ul class="space-y-2 text-sm">
+                <li class="text-center">1.3.6</li>
+                <ul class="space-y-2 text-sm">
+                  <li><span class="ico">+</span> na samej górze "AKCJE" więc od razu widzisz tam że pracownik odszedł czy brak waluty bez przeglądania wszystkiego</li>
+                  <li><span class="ico">+</span> podział na sektor państwowy/prywatny dla tych co zarządzają Państwowymi spółkami</li>
+                </ul>
+              </ul>
+              <ul class="space-y-2 text-sm">
+                <li class="text-center">1.3.3</li>
+                <ul class="space-y-2 text-sm">
+                  <li><span class="ico">+</span> dokładność zaokrągleń walut do 0,001</li>
+                </ul>
+              </ul>
               <ul class="space-y-2 text-sm">
                 <li class="text-center">1.3.2</li>
                 <ul class="space-y-2 text-sm">
