feat: add NPC script card to index.html

--- a/index.html
+++ b/index.html
@@ -717,6 +717,52 @@
             </div>
           </details>
         </div>
+
+        <!-- Export NPC Workers to CSV -->
+        <div class="script-card p-6">
+          <div class="text-center mb-4">
+            <div class="w-16 h-16 bg-indigo-500 rounded-full flex items-center justify-center mx-auto mb-3">
+              <span class="text-2xl">👷</span>
+            </div>
+            <h3 class="text-xl font-bold text-gray-800 mb-2">Export NPC Workers</h3>
+            <span class="inline-block bg-indigo-100 text-indigo-800 text-xs px-2 py-1 rounded-full font-medium">
+              v1.0.0
+            </span>
+          </div>
+          <p class="text-gray-600 mb-4 text-sm leading-relaxed">
+            Eksportuje NPC zatrudnionych w firmach z kraju (region, pracownicy, pensje, lokacje). Panel UI pojawia się na
+            stronie kraju np: <code>https://eclesiar.com/country/*</code>. Automatycznie pobiera dane ze wszystkich firm w
+            kraju i generuje plik CSV z pełnymi informacjami o pracownikach NPC.
+          </p>
+          <a
+            href="https://24na7.info/eclesiar-scripts/Eclesiar_NPC_Workers_Export.user.js"
+            class="download-btn text-white font-medium py-2 px-4 rounded-lg block text-center text-sm"
+          >
+            📥 Pobierz skrypt
+          </a>
+          <div class="chip-row">
+            <span class="chip"><span class="ico">👥</span>Pełne dane NPC</span>
+            <span class="chip"><span class="ico">💼</span>Pensje i lokacje</span>
+            <span class="chip"><span class="ico">📊</span>Export do CSV</span>
+          </div>
+          <details class="changelog">
+            <summary>
+              <span class="disclosure-chevron">▶</span>
+              <span class="label-closed">Pokaż changelog</span>
+              <span class="label-open">Ukryj changelog</span>
+            </summary>
+            <div class="mt-2 text-sm text-white/90">
+              <ul class="space-y-2 text-sm">
+                <li class="text-center">1.0.0</li>
+                <ul class="space-y-2 text-sm">
+                  <li><span class="ico">+</span> pierwsze wydanie - eksport NPC z firm w kraju</li>
+                  <li><span class="ico">+</span> automatyczne pobieranie danych z firm</li>
+                  <li><span class="ico">+</span> eksport do CSV z pełnymi informacjami</li>
+                </ul>
+              </ul>
+            </div>
+          </details>
+        </div>
       </div>
 
       <!-- Installation Instructions -->
